shipment assignment validations new messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ shipment.barcode.missing=Shipment Barcode number missing
 shipment.delivery-point.missing=Shipment Delivery point id missing
 shipment.data.violation=Shipment(s) data invalid
 shipment.delivery-point.not-found=No Delivery point found in database
+shipment.assignment.not-found=Some of all Packages or Bags not found in database
 #--route--
 route.created=Route(s) created
 route.plate.number.missing=Vehicle plate number missing
